# skland-api

./: .pre-commit-config.yaml  CREDITS.md  LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
example/: demo.py  sign.py  t.py
skland_api/: __init__.py  api.py  auth_info.py  character_info.py  constants.py  sm.py
skland_api/cli/: __init__.py  character_info.py  cli.py  constants.py  main.py  utils.py
skland_api/cli/commands/: __init__.py  common.py  dashboard.py  show.py
skland_api/cli/modules/: __init__.py  affair.py  base.py  interactive.py  mission.py  online.py  recruit.py  sign.py  stamina.py  title.py
skland_api/cli/utils/: __init__.py  formatter.py  logger.py
skland_api/models/: __init__.py  auth.py  character.py
skland_api/modules/: __init__.py  base.py  checkin.py  sign.py
src/skland_api/: __init__.py  api.py
src/skland_api/cli/: __init__.py  common.py  core.py
src/skland_api/cli/commands/dashboard/: __init__.py
src/skland_api/cli/commands/dashboard/formatter/: __init__.py  mission.py  profile.py
src/skland_api/cli/dashboard/: __init__.py
src/skland_api/cli/dashboard/formatter/: __init__.py  checkin.py  infrast_assignment.py  infrast_basic.py  mission.py  online.py  recruit.py  routine.py  sanity.py  update.py
src/skland_api/models/: __init__.py  auth.py  character.py  components.py  constants.py
src/skland_api/modules/: checkin.py  infrast_assignment.py  infrast_basic.py  mission.py  online.py  profile.py  recruit.py  routine.py  sanity.py  update.py
