[project]
name = "skland-api"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[project.scripts]
skland = "skland_api.cli:main"

[project.optional-dependencies]
cli = [
    "platformdirs>=4.3.8",
    "rich>=14.2.0",
    "rich-click>=1.9.4",
    "wcwidth>=0.2.13",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ty>=0.0.5",
]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
python_version = "3.14"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
extend-ignore = ["E501"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

[tool.ruff.lint.isort]
known-first-party = ["skland_api"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
